examples/simple/config/monitoredRepos/gitops-deploy-workflow-templates.ingress.yaml
# Setup the ingress for the service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitops-workflow-templates
  namespace: argocd
  annotations:
    # GCP
    kubernetes.io/ingress.class: "nginx"
    # Azure
    #kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - http:
        paths:
          - path: /webhooks/gitops-deploy/github-reposrc
            pathType: Prefix
            backend:
              service:
                name: gitops-deploy-eventsource-svc
                port:
                  number: 80
      # You will need to customise this as appropriate
      host: frontend.35-184-68-25.nip.io
